--- a/_src/templates/index.jade
+++ b/_src/templates/index.jade
@@ -27,8 +27,8 @@ block content
           | cooking up my latest batch of code, and serving up the next great idea.
         .post-list
             h2 Latest From The Blog
-            p Sorry - no blog posts yet. Check back soon, as I intend to be very chatty.
-            //-ul
+            //-p Sorry - no blog posts yet. Check back soon, as I intend to be very chatty.
+            ul
               each article in articles
                 li
                   h3
