--- a/_src/templates/index.jade
+++ b/_src/templates/index.jade
@@ -18,6 +18,17 @@ block content
               span musician
               span retro gamer
               span server administrator
+              span unity developer
+              span html5 developer
+              span technology geek
+              span netflix addict
+              span proud father
+              span dot net programmer
+              span project manager
+              span sweet tea enthusiast
+              span closet javascript supporter
+              span version control fanatic
+              span book collector
               span movie buff
               span music lover
               span code ninja
