--- a/_src/templates/article.jade
+++ b/_src/templates/article.jade
@@ -1,9 +1,7 @@
+block title
+  title = page.title
 
 extends layout
-
-block prepend title
-  | #{ page.title + " - "}
-
 
 block content
   .blog-single.readable-content
@@ -18,6 +16,14 @@ block content
             span.author.vcard
               a.url.fn.n(href='#', title='View all posts by #{ page.metadata.author }', rel='author')= page.metadata.author
           | .
+        ul.social
+          li 
+            .fb-like(data-width='200', data-layout='button_count', data-action='like', data-show-faces='true', data-share='true')
+          li 
+            a.twitter-share-button(href='https://twitter.com/share', data-via='cheapdevotion') Tweet
+            
+            
+  
       .entry-content
         p.lead!= typogr(page.html).typogrify()
 
@@ -43,5 +49,20 @@ block content
 block prepend footer
   div.footer-nav
     a(href=contents.index.url) « Back
+
+  script(type="text/javascript")
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
+  script(type="text/javascript")
+    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+
+
+
 
 
