--- a/_src/templates/layout.jade
+++ b/_src/templates/layout.jade
@@ -3,7 +3,9 @@ html
   head
     meta(charset='utf-8')
     meta(name='description', content='The personal website and blog of game, app, and mobile developer Jacob Williams.')
-    title= locals.name
+    block title
+    - var title = locals.name + " - " + title || "Inexpensive Commitment"
+    title #{title}
     // FONTS
     link(href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic', rel='stylesheet', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Libre+Baskerville', rel='stylesheet', type='text/css')
