--- a/_src/contents/css/main.css
+++ b/_src/contents/css/main.css
@@ -187,7 +187,7 @@ ul { list-style:square; }
 .icon-th-large-list li:before { content: "\f009"; font-size:9px; width:2.2em; }
 dt { font-size:.92em; }
 dd { font-size:.9em; padding-bottom:1em; margin-left:1em; }
-dd:before { content: "\f0a4"; font-size:14px; }
+dd:before { font-size:14px; }
 
 /* forms */
 label { display:block; font-size:.9em; margin-bottom:.2em; }
