--- a/_src/templates/layout.jade
+++ b/_src/templates/layout.jade
@@ -66,4 +66,5 @@ html
     script(src='/js/google-code-prettify/prettify.js')
     script(src='/js/jquery.uniform.min.js')
     script(src='/js/main.js')
+    script(src='/js/git.js')
     script(src="http://yandex.st/highlightjs/7.3/highlight.min.js");
