Added article about cheapdevotion games

--- a/_src/templates/article.jade
+++ b/_src/templates/article.jade
@@ -20,7 +20,7 @@ block content
             
   
       .entry-content
-        p.lead!= typogr(page.html).typogrify()
+        p!= page.html
 
       if (page.metadata.social)
         .addthis_sharing_toolbox
