--- a/_src/templates/index.jade
+++ b/_src/templates/index.jade
@@ -12,13 +12,13 @@ block content
               span game designer
               span game programmer
               span vr enthusiast
-              span cattle farmer
               span website developer
               span writer
               span musician
               span retro gamer
               span server administrator
               span unity developer
+              span unreal developer
               span html5 developer
               span technology geek
               span netflix addict
