More project page updates

--- a/_src/templates/projects.jade
+++ b/_src/templates/projects.jade
@@ -12,7 +12,7 @@ block content
             
   
       .entry-content
-        p.lead!= typogr(page.html).typogrify()
+        p= page.html
 
         h2 GitHub Repositories
         p From time to time, I work on or contribute to quite a few open source projects. 
